GC tracing of page sizes are wrong in a few places

XMLWordPrintable

    • gc
    • b10

      G1, Paralle and Serial all log incorrect page sizes with os::trace_pages().

      For G1 the parameter order is wrong and in Parallel and Serial the large_page_size will always be used even if the mappings fail.

      I've created a test that catch those issues but there are also problems when tracing the code heaps (see JDK-8261029), so the test can't be added until a fix for that is integrated as well.

      The test is available here for now:
      https://github.com/kstefanj/jdk/tree/test-for-trace-page-sizes

            Assignee:
            Stefan Johansson
            Reporter:
            Stefan Johansson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: