8261230: GC tracing of page sizes are wrong in a few places